test/libyul/yulSyntaxTests/dataoffset_shadowing.yul
{
    function dataoffset(a) -> b {}
}
// ====
// bytecodeFormat: legacy
// ----
// ParserError 5568: (15-25): Cannot use builtin function name "dataoffset" as identifier name.
